# spherical-model

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  simulation.ipynb  spin_system_visualization.py
models/: spin_system.py
models/my_model_example/: my_model_example.keras
models/my_module_example/: fingerprint.pb  saved_model.pb
modules/: spin_system.py  spin_system_experimental.py
notebooks/: ising_model.ipynb  jax_ising_metropolis.ipynb  manim.ipynb  mean_magnetization.ipynb  performance_sweep.ipynb  population.ipynb  simulation.ipynb  spherical_mean_field_ SGD.ipynb  spherical_model.ipynb  spin_glass.ipynb  spin_system_experimental.ipynb  spin_system_magnetization.ipynb  tensor_flow.ipynb  z2_gauge_model.ipynb  z2_gauge_theory.ipynb
spin_system/: __init__.py  core.py  interactions.py  plots.py
tests/: test_core.py
